tests/baselines/reference/typeFromPropertyAssignment3.errors.txt
a.js(11,1): error TS2454: Variable 'ja' is used before being assigned.
a.js(14,1): error TS2454: Variable 'da' is used before being assigned.


==== a.js (2 errors) ====
    var Outer = function O() {
        this.y = 2
    }
    Outer.Inner = class I {
        constructor() {
            this.x = 1
        }
    }
    /** @type {Outer} */
    var ja
    ja.y
    ~~
!!! error TS2454: Variable 'ja' is used before being assigned.
    /** @type {Outer.Inner} */
    var da
    da.x
    ~~
!!! error TS2454: Variable 'da' is used before being assigned.
    